--- a/src/ryo.css
+++ b/src/ryo.css
@@ -39,7 +39,7 @@
 }
 
 .alfContainer .image {
-  background-image: url(./assets/alfian.png);
+  background-image: url(./assets/tes.jpeg);
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
